--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -4,19 +4,16 @@ $font-stack: 'Open Sans', Helvetica, sans-serif;
 $font-stack-name: 'Roboto Condensed', Helvetica, sans-serif;
 $font-style-name: 'Light';
 
-// $primary-color: #f2f2f2;
-// $background-color: #222;
-// $link-color: #000099;
-// $link-color-hover: #0066ff;
-
 $primary-color: #000000ad;
 $background-color: #ffffff;
-// $background-color: #d6d6d6;
 $link-color: #000099;
 $link-color-hover: #0066ff;
 
 $content-info-top: 30%;
 $content-info-left: 15%;
+
+$button-size: 80px;
+$button-border-width: 2px;
 
 html,
 body {
@@ -25,12 +22,22 @@ body {
 	align-content: stretch;
 	width: 100%;
 	height: 100%;
-	margin:0;
-	padding:0;
+	margin: 0;
+	padding: 0;
 	background: $background-color;
 
 	font: 100% $font-stack;
 	color: $primary-color;
+}
+
+a {
+	cursor: pointer;
+	text-decoration: none;
+	color: $link-color;
+
+	&:hover {
+		color: $link-color-hover;
+	}
 }
 
 .content_info {
@@ -46,15 +53,35 @@ body {
 	}
 
 	a {
-		text-decoration: none;
-		color: $primary-color;
 		border-bottom: 1px dotted;
 
 		&:hover {
-			color: $link-color-hover;
 			border-bottom: none;
 		}
 	}
+}
+
+.links {
+	margin: 2em 0em 2em 0em;
+
+	&:after {
+		content: "";
+		clear: both;
+	}
+}
+
+.icon {
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: $button-size;
+	height: $button-size;
+	border-radius: 50%;
+	border: $button-border-width solid;
+	font-size: 2em;
+	float: left;
+	margin-right: 0.5em;
 }
 
 #canvas {
