--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -9,6 +9,7 @@ $content-background: linear-gradient( to top, black, #545454 );
 $primary-color: #ffffff;
 $link-color: $primary-color;
 $link-color-hover: #287efe;
+$link-color-border: #b3b3b3;
 
 $button-size: 40px;
 $button-border-width: 2px;
@@ -54,7 +55,7 @@ header {
 	}
 
 	a {
-		border-bottom: 1px dotted;
+		border-bottom: 1px solid $link-color-border;
 
 		&:hover {
 			border-bottom: none;
