--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -142,8 +142,12 @@ header {
 }
 
 .hi {
-	font-weight: bold;
-	font-size: 4em;
+	justify-content: center;
 	width: 150px;
 	height: 150px;
+}
+
+img {
+	width: 100%;
+	height: 100%;
 }
